Fixed blurry text on form

--- a/resources/css/what-we-do.css
+++ b/resources/css/what-we-do.css
@@ -286,13 +286,10 @@ main {
     background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .modal-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     width: 40%;
     height: 85%;
     background-color: white;
@@ -300,13 +297,16 @@ main {
     padding: 3% 4%;
 }
 
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .close-canvas {
-    position: absolute;
-    top: 0;
-    right: 0;
+    align-self: flex-start;
     width: 50px;
     height: 50px;
-    margin: 35px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -316,7 +316,7 @@ main {
     background: var(--primary-text);
 }
 
-.modal-content>h2 {
+.modal-header>h2 {
     display: inline-block;
     position: relative;
     font-size: 48px;
@@ -518,7 +518,7 @@ main {
 }
 
 @media (max-width: 1400px) {
-    .modal-content>h2 {
+    .modal-header>h2 {
         font-size: 36px;
         margin-bottom: 30px;
     }
